[project]
name = "sample-mifos-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nest-asyncio",
    "openai-agents",
    "mcp",
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-chroma",
    "streamlit",
    "chromadb",
    "sentence-transformers",
    "python-dotenv",
    "unstructured[md]",
    "accelerate"

]
